Update get-cost-element-values API: Remove RHDF, Add MCOST
